@@ -1,3 +1,8 @@
+2015-10-24  Natalia Portillo  <claunia@claunia.com>
+
+	* Enums.cs:
+	  Added information from ANSI X3T9.3 No. 185 (SASI)
+
 2015-10-23  Natalia Portillo  <claunia@claunia.com>
 
 	* Enums.cs:
